--- a/views/partials/sidebar.ejs
+++ b/views/partials/sidebar.ejs
@@ -22,10 +22,7 @@
 
         <a href="" class="header__logo">IFVest</a>
 
-        <div class="header__search">
-            <input type="search" placeholder="Search" class="header__input">
-            <i class='bx bx-search header__icon'></i>
-        </div>
+
 
         <div class="header__toggle">
             <i class='bx bx-menu' id="header-toggle"></i>
@@ -63,13 +60,13 @@
 
                     <a href="/usuario/iniciologado" class="nav__link active">
                         <i class='bx bx-home nav__icon'></i>
-                        <span class="nav__name">Inicio</span>
+                        <span class="nav__name"style="font-size: medium;">Inicio</span>
                     </a>
 
                     <div class="nav__dropdown">
                         <a href="/usuario/perfil" class="nav__link">
                             <i class='bx bx-user nav__icon'></i>
-                            <span class="nav__name">Perfil</span>
+                            <span class="nav__name"style="font-size: medium;">Perfil</span>
 
                         </a>
 
@@ -84,28 +81,17 @@
 
 
 
-                    <a href="#" class="nav__link">
-                        <i class='bx bx-compass nav__icon'></i>
-                        <span class="nav__name">Explore</span>
-                    </a>
-
-
-                    <div class="nav__dropdown">
-                        <a href="/usuario/video" class="nav__link">
-                            <i class='bx bxs-video nav__icon'></i>
-                            <span class="nav__name">Videos</span>
-
-                        </a>
 
 
 
-                    </div>
+
+             
                     <% if (perfilUsuario==="PROFESSOR" ) { %>
                         <div class="nav__dropdown">
                             <a href="#" class="nav__link">
                                 <i class='bx bx-question-mark nav__icon'></i>
 
-                                <span class="nav__name">Questões</span>
+                                <span class="nav__name"  style="font-size: medium;">Questões</span>
                                 <i class='bx bx-chevron-down nav__icon nav__dropdown-icon'></i>
                             </a>
 
@@ -113,14 +99,11 @@
                                 <div class="nav__dropdown-content">
 
 
-                                    <a href="/professor/registrar-questao/objetiva" class="nav__dropdown-item"> <i
-                                            class='bx bx-checkbox-square'></i>Objetiva</a>
-                                    <a href="/professor/registrar-questao/dissertativa" class="nav__dropdown-item"><i
-                                            class='bx bxs-paint'></i> Dissertativa</a>
+                                    <a href="/professor/registrar-questao/objetiva" class="nav__dropdown-item" style="font-size: medium;"> Objetiva</a>
+                                    <a href="/professor/registrar-questao/dissertativa" class="nav__dropdown-item" style="font-size: medium;"></i> Dissertativa</a>
 
 
-                                    <a href="/professor/questoes" class="nav__dropdown-item"><i
-                                            class='bx bxs-paint'></i>Minhas questões</a>
+                                    <a href="/professor/questoes" class="nav__dropdown-item"style="font-size: medium;">Minhas<br> Questões</a>
 
 
 
@@ -129,9 +112,9 @@
 
                         </div>
                         <div class="nav__dropdown">
-                            <a href="#" class="nav__link">
+                            <a href="/professor/topicos" class="nav__link">
                                 <i class='bx bx-check-square nav__icon'></i>
-                                <span class="nav__name">Topicos</span>
+                                <span class="nav__name"style="font-size: medium;">Topicos</span>
                                 <i class='bx bx-chevron-down nav__icon nav__dropdown-icon'></i>
                             </a>
 
@@ -140,7 +123,7 @@
                                 <div class="nav__dropdown-content">
 
                        
-                                    <a href="/professor/topicos" class="nav__dropdown-item">Meus Topicos</a>
+                                    <a href="/professor/topicos" class="nav__dropdown-item"style="font-size: medium;">Meus Topicos</a>
                                 </div>
                             </div>
 
@@ -149,7 +132,7 @@
                             <div class="nav__dropdown">
                                 <a href="#" class="nav__link">
                                     <i class='bx bx-book-heart nav__icon'></i>
-                                    <span class="nav__name">Simulados</span>
+                                    <span class="nav__name"style="font-size: medium;">Simulados</span>
                                     <i class='bx bx-chevron-down nav__icon nav__dropdown-icon'></i>
                                 </a>
 
@@ -157,8 +140,8 @@
                                 <div class="nav__dropdown-collapse">
                                     <div class="nav__dropdown-content">
 
-                                        <a href="/usuario/criar-simulado" class="nav__dropdown-item">Criar Simulado</a>
-                                        <a href="/usuario/Simulados/meus-simulados" class="nav__dropdown-item">Meus Simulados</a>
+                                        <a href="/usuario/criar-simulado" class="nav__dropdown-item"style="font-size: medium;">Criar<br>Simulado</a>
+                                        <a href="/usuario/Simulados/meus-simulados" class="nav__dropdown-item"style="font-size: medium;">Meus<br>Simulados</a>
                                         <!-- <a href="/usuario/seleciona-simulado" class="nav__dropdown-item">Consultar simulados</a> -->
 
 
@@ -174,7 +157,7 @@
         <form action="/logoff" method="post" class="nav__logout-form">
             <a id="logout-link" class="nav__link nav__logout" onclick="">
                 <i class='bx bx-log-out nav__icon'></i>
-                <span class="nav__name">Log Out</span>
+                <span class="nav__name"style="font-size: medium;">Sair</span>
             </a>
         </form>
 
