--- a/views/professor/minhas-questoes.ejs
+++ b/views/professor/minhas-questoes.ejs
@@ -7,308 +7,21 @@
 
     <!--========== BOX ICONS ==========-->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/boxicons@latest/css/boxicons.min.css">
+    <!-- UIkit CSS -->
+
+    <link rel="stylesheet" href="/css/uikit.min.css" />
+    <script src="/js/uikit.min.js"></script>
+    <script src="/js/uikit-icons.min.js"></script>
+    <!-- UIkit JS -->
 
     <!--========== CSS ==========-->
+    <link rel="stylesheet" href="/css/minhasquestoes.css">
     <link rel="stylesheet" href="/css/styles.css">
     <link href="https://cdn.quilljs.com/1.3.6/quill.snow.css" rel="stylesheet">
     <script src="https://cdn.quilljs.com/1.3.6/quill.js"></script>
+
     <title>Responsive sidebar submenus</title>
-    <style>
-        * {
-            margin: 0;
-            padding: 0;
-            box-sizing: border-box;
-        }
 
-        body {
-            font-family: Arial, sans-serif;
-            line-height: 1.6;
-            background-color: #f5f5f5;
-        }
-
-        .container {
-            max-width: 1200px;
-            margin: 0 auto;
-            padding: 20px;
-        }
-
-        /* Estilos do cabeçalho */
-        header {
-            background-color: #333;
-            color: #fff;
-            padding: 10px;
-        }
-
-        /* Estilos da barra lateral */
-        .sidebar {
-            width: 250px;
-            background-color: #444;
-            color: #fff;
-            position: fixed;
-            left: 0;
-            top: 0;
-            height: 100%;
-            overflow-y: auto;
-        }
-
-        .sidebar h2 {
-            padding: 10px;
-        }
-
-        .sidebar ul {
-            list-style-type: none;
-            padding: 0;
-        }
-
-        .sidebar li {
-            padding: 10px;
-            border-bottom: 1px solid #666;
-        }
-
-        /* Estilos do conteúdo principal */
-        .main-content {
-            margin: 0 auto;
-            /* Centraliza o conteúdo principal */
-            max-width: 800px;
-            /* Define a largura máxima do conteúdo */
-            padding: 20px;
-        }
-
-        .main-content h1 {
-            margin-bottom: 20px;
-        }
-
-        /* Estilos da tabela */
-        .table-container {
-            overflow-x: auto;
-        }
-
-        table {
-            width: 100%;
-            border-collapse: collapse;
-            margin-bottom: 20px;
-        }
-
-        table th,
-        table td {
-            padding: 10px;
-            border: 1px solid #ccc;
-        }
-
-        /* Estilos da paginação */
-        .pagination-container {
-            margin-top: 20px;
-            text-align: center;
-            /* Centraliza a paginação */
-        }
-
-        .pagination-container a {
-            display: inline-block;
-            padding: 8px 16px;
-            margin-right: 5px;
-            background-color: #ccc;
-            color: #333;
-            text-decoration: none;
-            border-radius: 5px;
-        }
-
-        .pagination-container a.active {
-            background-color: #333;
-            color: #fff;
-        }
-
-        /* Estilos do formulário */
-        form {
-            margin-bottom: 20px;
-            text-align: center;
-            /* Centraliza o formulário */
-        }
-
-        form select,
-        form input[type="text"],
-        form button,
-        form input[type="submit"] {
-            padding: 10px;
-            margin-right: 10px;
-            border-radius: 5px;
-            border: 1px solid #ccc;
-        }
-
-        form input[type="checkbox"] {
-            margin-right: 5px;
-        }
-
-        /* Estilos do link de voltar */
-        .back-link {
-            display: block;
-            margin-top: 20px;
-            color: #333;
-            text-decoration: none;
-            border-bottom: 1px solid #333;
-            padding-bottom: 5px;
-        }
-
-        .botao-associar {
-            padding: 10px 20px;
-            width: 20%;
-            background-color: #007bff;
-            color: #fff;
-            border: none;
-            border-radius: 3px;
-            cursor: pointer;
-            font-size: 14px;
-            margin-top: 10px;
-
-            justify-self: center;
-            border: 1px solid #272525;
-        }
-
-        /* Estilos adicionais para a seção de questões por área */
-        .tabela-qnt-area {
-            width: 10%;
-        }
-
-        /* Estilos gerais para a seção */
-        /* Estilos para a pequena tabelas 
-/* Estilo geral para a div que contém todos os itens */
-        .container {
-            display: flex;
-            justify-content: space-between;
-            /* Espalha os itens uniformemente */
-            flex-wrap: wrap;
-            /* Permite que os itens passem para a próxima linha se não houver espaço suficiente */
-        }
-
-        /* Estilo para cada item dentro do container */
-        .item {
-            margin-right: 10px;
-            /* Adiciona espaço à direita de cada item */
-            margin-bottom: 10px;
-            /* Adiciona espaço abaixo de cada item */
-        }
-
-        /* Estilo para o número dentro do item */
-        .numero {
-            font-variant-numeric: oldstyle-nums;
-            /* Exemplo usando oldstyle-nums */
-            font-weight: bold;
-
-        }
-
-        /* Estilos responsivos */
-        @media screen and (max-width: 768px) {
-            .sidebar {
-                width: 100%;
-                position: relative;
-                margin-bottom: 20px;
-            }
-
-            .main-content {
-                margin-left: 0;
-                max-width: none;
-                /* Remove a largura máxima no modo responsivo */
-            }
-
-            .pagination-container {
-                text-align: center;
-            }
-
-            form {
-                text-align: center;
-            }
-        }
-        table {
-                    width: 100%;
-                    border-collapse: collapse;
-                }
-
-                th,
-                td {
-                    border: 1px solid #ddd;
-                    padding: 8px;
-                    text-align: center;
-                }
-
-                th {
-                    background-color: #f2f2f2;
-                }
-
-                .edit-btn {
-                    display: inline-block;
-                    padding: 10px 10px;
-                    background-color: #333;
-                    /* Cor de fundo do botão */
-                    color: #fff;
-                    /* Cor do texto do botão */
-                    text-decoration: none;
-                    /* Remove o sublinhado do link */
-                    border-radius: 4px;
-                    /* Arredonda os cantos do botão */
-                    transition: background-color 0.3s ease;
-                    /* Animação suave ao passar o mouse */
-                }
-
-                .edit-btn:hover {
-                    background-color: #0056b3;
-                    /* Cor de fundo do botão ao passar o mouse */
-                }
-
-                .pagination {
-                    list-style-type: none;
-                    display: flex;
-                    justify-content: center;
-                    padding: 20px 0;
-                }
-
-                .pagination li {
-                    display: block;
-                    margin: 0 5px;
-                }
-
-                .pagination li a {
-                    display: block;
-                    padding: 5px 10px;
-                    color: #333;
-                    text-decoration: none;
-                    border-radius: 5px;
-                }
-
-                .pagination li.active a {
-                    background-color: #0056b3;
-                    color: white;
-                }
-
-                .pagination li a:hover {
-                    background-color: #007bff;
-                }
-
-                .conteudo-com-html {
-                    white-space: pre-wrap;
-                }
-                .button-container {
-        display: flex;
-        /* Usa flexbox para alinhar os botões lado a lado */
-        gap: 10px;
-        /* Espaçamento entre os botões */
-        justify-content: center;
-        /* Centraliza os botões horizontalmente */
-        padding: 10px;
-        /* Padding ao redor do contêiner para dar espaço */
-        /* Fundo claro para o contêiner */
-        /* Sombra suave para dar profundidade */
-    }
-
-    .button {
-        display: flex;
-        align-items: center;
-        gap: 5px;
-        padding: 8px 12px;
-        border-radius: 5px;
-        border: 1px solid black;
-        color: black;
-        cursor: pointer;
-
-    }
     </style>
 </head>
 
@@ -316,21 +29,25 @@
     <%- include('../partials/sidebar') %>
         <!--========== CONTENTS ==========-->
         <main>
-            <style>
+         
+            <% if (typeof errorMessage !== 'undefined' && errorMessage.trim()) { %>
+                <script>
+                    window.onload = function() {
+                        alert("<%= errorMessage %>");
+                    };
+                </script>
+            <% } %>
 
-            </style>
-
-
-            <h1>Questoes</h1>
+            <h1 class="uk-heading-divider ">MINHAS QUESTÕES</h1>
 
             <!-- Adicione isso antes da tabela na página minhas-questoes.ejs -->
             <form action="/professor/questoes" method="GET">
                 <!-- Campo de filtragem por título -->
                 <input type="text" name="titulo" placeholder="Filtrar por título">
-                <button type="submit">Pesquisar</button>
+                <button type="submit"><i class='bx bx-search'></i>Pesquisar</button>
 
                 <!-- Campo de seleção para áreas -->
-                <select name="areaId">
+                <select class="uk-search"name="areaId">
                     <option value="">Todas as áreas</option>
                     <% Areas.forEach(area=> { %>
                         <option value="<%= area.id %>">
@@ -338,7 +55,7 @@
                         </option>
                         <% }); %>
                 </select>
-                <button type="submit">Filtrar por área</button>
+                <button type="submit"><i class='bx bx-filter-alt' ></i>Filtrar por área</button>
 
                 <!-- Campo de seleção para tópicos -->
                 <select name="topicosSelecionados">
@@ -349,10 +66,10 @@
                         </option>
                         <% }); %>
                 </select>
-                <button type="submit">Filtrar por tópicos</button>
+                <button type="submit"><i class='bx bxs-filter-alt' ></i>Filtrar por tópicos</button>
             </form>
             <!-- Adicione campos de filtro no topo da página -->
-            <table id="tabela-questoes">
+            <table class="uk-table uk-table-striped">
                 <thead>
                     <tr>
                         <th>Título</th>
@@ -364,52 +81,54 @@
                     </tr>
                 </thead>
 
-                    <tbody>
-                        <% questoes.forEach(questao=> { %>
-                            <tr>
-                                <td>
-                                    <%= questao.titulo %>
-                                </td>
+                <tbody>
+                    <% questoes.forEach(questao=> { %>
+                        <tr>
+                            <td>
+                                <%= questao.titulo %>
+                            </td>
 
 
-                                <td>
-                                    <%= questao.tipo %>
-                                </td>
-                                <td>
-                                    <div class="name" data-delta='<%= questao.pergunta %>'>
-                                        <!-- O conteúdo será inserido via JavaScript -->
-                                        <span class="required">*</span>
-                                    </div>
-                                </td>
+                            <td>
+                                <%= questao.tipo %>
+                            </td>
+                            <td>
+                                <div class="name" data-delta='<%= questao.pergunta %>'>
+                                    <!-- O conteúdo será inserido via JavaScript -->
+                                    <span class="required">*</span>
+                                </div>
+                            </td>
 
-                                <td>
-                                    <%= questao.Topicos.map(topico=> topico.materia).join(', ') %>
-                                </td> <!-- Exibe os tópicos separados por vírgula -->
-                                <td>
-                                    <div class="button-container">
-                                        <a href="/professor/editar-questao/<%= questao.id %>" class="button">
-                                            <div class="icon-button">
-                                                <i class="fas fa-edit"></i> Editar
-                                            </div>
-                                        </a>
-                                        <a class="button" onclick="confirmDelete(<%= questao.id %>)">
-                                            <div class="icon-button">
-                                                <i class="fas fa-trash"></i> Excluir
-                                            </div>
-                                        </a>
-                                        <form id="deleteForm<%= questao.id %>" action="/professor/excluir-questao/<%= questao.id %>?_method=DELETE" method="POST">
-                                            <input type="hidden" name="_method" value="DELETE">
-                                        </form>
-                                    </div>
-                                    </div>
-                               
-                                   
-                                  
-                                </td>
+                            <td>
+                                <%= questao.Topicos.map(topico=> topico.materia).join(', ') %>
+                            </td> <!-- Exibe os tópicos separados por vírgula -->
+                            <td>
+                                <div class="button-container">
+                                    <a href="/professor/editar-questao/<%= questao.id %>" class="button">
+                                        <div class="icon-button">
+                                            <i class="fas fa-edit"></i> Editar
+                                        </div>
+                                    </a>
+                                    <a class="button" onclick="confirmDelete(<%= questao.id %>)">
+                                        <div class="icon-button">
+                                            <i class="fas fa-trash"></i> Excluir
+                                        </div>
+                                    </a>
+                                    <form id="deleteForm<%= questao.id %>"
+                                        action="/professor/excluir-questao/<%= questao.id %>?_method=DELETE"
+                                        method="POST">
+                                        <input type="hidden" name="_method" value="DELETE">
+                                    </form>
+                                </div>
+                                </div>
 
-                            </tr>
-                            <% }); %>
-                    </tbody>
+
+
+                            </td>
+
+                        </tr>
+                        <% }); %>
+                </tbody>
             </table>
             <!-- Antes do fechamento do </main> -->
             <nav aria-label="Navegação">
@@ -442,15 +161,15 @@
         <!--========== MAIN JS ==========-->
         <script src="/js/main.js"></script>
         <script src="/js/quillContentHtmlTable.js"></script>
-        
-<script>
-function confirmDelete(questaoId) {
-    if (confirm("Tem certeza que deseja excluir esta questão? Esta ação não pode ser desfeita.")) {
-        document.getElementById(`deleteForm${questaoId}`).submit();
-    }
-}
 
-            </script>
+        <script>
+            function confirmDelete(questaoId) {
+                if (confirm("Tem certeza que deseja excluir esta questão? Esta ação não pode ser desfeita.")) {
+                    document.getElementById(`deleteForm${questaoId}`).submit();
+                }
+            }
+
+        </script>
 </body>
 
 </html>
