--- a/views/prova/gabarito.ejs
+++ b/views/prova/gabarito.ejs
@@ -42,7 +42,13 @@
 <body>
     <%- include('../partials/sidebar') %>
         <main>
-
+            <% if (typeof errorMessage !== 'undefined' && errorMessage.trim()) { %>
+                <script>
+                    window.onload = function() {
+                        alert("<%= errorMessage %>");
+                    };
+                </script>
+            <% } %>
             <form id="questionario" class="form" method="POST">
                 <div class="title-div">
                     <h1>Teste de questões <%= simulado.tipo %>
