--- a/views/simulado/associar-pergunta-simulado.ejs
+++ b/views/simulado/associar-pergunta-simulado.ejs
@@ -11,214 +11,16 @@
     <script src="https://cdn.quilljs.com/1.3.6/quill.js"></script>
     <!--========== CSS ==========-->
     <link rel="stylesheet" href="/css/styles.css">
+    <link rel="stylesheet" href="/css/uikit.min.css" />
+    <script src="/js/uikit.min.js"></script>
+    <script src="/js/uikit-icons.min.js"></script>
+    <!-- UIkit JS -->
 
+    <!--========== CSS ==========-->
+    <link rel="stylesheet" href="/css/minhasquestoes.css">
     <title>Responsive sidebar submenus</title>
 
-    <style>
-        * {
-            margin: 0;
-            padding: 0;
-            box-sizing: border-box;
-        }
-
-        body {
-            font-family: Arial, sans-serif;
-            line-height: 1.6;
-            background-color: #f5f5f5;
-        }
-
-        .container {
-            max-width: 1200px;
-            margin: 0 auto;
-            padding: 20px;
-        }
-
-        /* Estilos do cabeçalho */
-        header {
-            background-color: #333;
-            color: #fff;
-            padding: 10px;
-        }
-
-        /* Estilos da barra lateral */
-        .sidebar {
-            width: 250px;
-            background-color: #444;
-            color: #fff;
-            position: fixed;
-            left: 0;
-            top: 0;
-            height: 100%;
-            overflow-y: auto;
-        }
-
-        .sidebar h2 {
-            padding: 10px;
-        }
-
-        .sidebar ul {
-            list-style-type: none;
-            padding: 0;
-        }
-
-        .sidebar li {
-            padding: 10px;
-            border-bottom: 1px solid #666;
-        }
-
-        /* Estilos do conteúdo principal */
-        .main-content {
-            margin: 0 auto;
-            /* Centraliza o conteúdo principal */
-            max-width: 800px;
-            /* Define a largura máxima do conteúdo */
-            padding: 20px;
-        }
-
-        .main-content h1 {
-            margin-bottom: 20px;
-        }
-
-        /* Estilos da tabela */
-        .table-container {
-            overflow-x: auto;
-        }
-
-        table {
-            width: 100%;
-            border-collapse: collapse;
-            margin-bottom: 20px;
-        }
-
-        table th,
-        table td {
-            padding: 10px;
-            border: 1px solid #ccc;
-        }
-
-        /* Estilos da paginação */
-        .pagination-container {
-            margin-top: 20px;
-            text-align: center;
-            /* Centraliza a paginação */
-        }
-
-        .pagination-container a {
-            display: inline-block;
-            padding: 8px 16px;
-            margin-right: 5px;
-            background-color: #ccc;
-            color: #333;
-            text-decoration: none;
-            border-radius: 5px;
-        }
-
-        .pagination-container a.active {
-            background-color: #333;
-            color: #fff;
-        }
-
-        /* Estilos do formulário */
-        form {
-            margin-bottom: 20px;
-            text-align: center;
-            /* Centraliza o formulário */
-        }
-
-        form select,
-        form input[type="text"],
-        form button,
-        form input[type="submit"] {
-            padding: 10px;
-            margin-right: 10px;
-            border-radius: 5px;
-            border: 1px solid #ccc;
-        }
-
-        form input[type="checkbox"] {
-            margin-right: 5px;
-        }
-
-        /* Estilos do link de voltar */
-        .back-link {
-            display: block;
-            margin-top: 20px;
-            color: #333;
-            text-decoration: none;
-            border-bottom: 1px solid #333;
-            padding-bottom: 5px;
-        }
-
-        .botao-associar {
-            padding: 10px 20px;
-            width: 20%;
-            background-color: #007bff;
-            color: #fff;
-            border: none;
-            border-radius: 3px;
-            cursor: pointer;
-            font-size: 14px;
-            margin-top: 10px;
-
-            justify-self: center;
-            border: 1px solid #272525;
-        }
-
-        /* Estilos adicionais para a seção de questões por área */
-        .tabela-qnt-area {
-            width: 10%;
-        }
-
-        /* Estilos gerais para a seção */
-        /* Estilos para a pequena tabelas 
-/* Estilo geral para a div que contém todos os itens */
-        .container {
-            display: flex;
-            justify-content: space-between;
-            /* Espalha os itens uniformemente */
-            flex-wrap: wrap;
-            /* Permite que os itens passem para a próxima linha se não houver espaço suficiente */
-        }
-
-        /* Estilo para cada item dentro do container */
-        .item {
-            margin-right: 10px;
-            /* Adiciona espaço à direita de cada item */
-            margin-bottom: 10px;
-            /* Adiciona espaço abaixo de cada item */
-        }
-
-        /* Estilo para o número dentro do item */
-        .numero {
-            font-variant-numeric: oldstyle-nums;
-            /* Exemplo usando oldstyle-nums */
-            font-weight: bold;
-
-        }
-
-        /* Estilos responsivos */
-        @media screen and (max-width: 768px) {
-            .sidebar {
-                width: 100%;
-                position: relative;
-                margin-bottom: 20px;
-            }
-
-            .main-content {
-                margin-left: 0;
-                max-width: none;
-                /* Remove a largura máxima no modo responsivo */
-            }
-
-            .pagination-container {
-                text-align: center;
-            }
-
-            form {
-                text-align: center;
-            }
-        }
-    </style>
+ 
 </head>
 
 <body>
@@ -226,23 +28,19 @@
         <!--========== CONTENTS ==========-->
         <main>
 
-            <h1>
-                <%= simulado.titulo %>
-            </h1>
-
-
-
-
-
-
-
-            <h1>Associar questoes</h1>
+            <h1 class="uk-heading-divider">ASSOCIAR QUESTÕES</Q></h1>
             <div>
-
+                <% if (typeof errorMessage !== 'undefined' && errorMessage.trim()) { %>
+                    <script>
+                        window.onload = function() {
+                            alert("<%= errorMessage %>");
+                        };
+                    </script>
+                <% } %>
                 <form action="/usuario/simulados/<%= simulado.id %>/adicionar-questoes" method="GET">
                     <!-- Campo de filtragem por título -->
                     <input type="text" name="titulo" placeholder="Filtrar por título">
-                    <button type="submit">Pesquisar</button>
+                    <button type="submit"><i class='bx bx-search'></i>Pesquisar</button>
 
                     <!-- Campo de seleção para áreas -->
                     <select name="areaId">
@@ -272,10 +70,12 @@
                         <% Object.entries(questoesPorArea).forEach(([areaId, count])=> { %>
                             <% const area=Areas.find(area=> area.id === Number(areaId)); %>
                                 <% if (area) { %>
-                                    <span class="item text">
-                                        <%= area.area %>: <span class="numero">
-                                                <%= count %>
-                                            </span>
+                                    <span >
+                                        <%= area.area %>: <span class="uk-badge">
+                                            <%= count %>
+                                        </span>
+                                                
+                                           
                                     </span>
                                     <% } %>
 
@@ -289,7 +89,7 @@
 
             <form action="/usuario/simulados/<%= simulado.id %>/adicionar-questoes" method="POST">
                 <div class="table-container">
-                    <table>
+                    <table class="uk-table uk-table-striped">
                         <thead>
                             <tr>
                                 <th></th>
