--- a/views/simulado/meus-simulados.ejs
+++ b/views/simulado/meus-simulados.ejs
@@ -10,10 +10,12 @@
 
     <!--========== CSS ==========-->
     <link rel="stylesheet" href="/css/styles.css">
+    <link rel="stylesheet" href="/css/uikit.min.css" />
+    <script src="/js/uikit.min.js"></script>
+    <script src="/js/uikit-icons.min.js"></script>
 
-
-        <!-- Outros elementos do head -->
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    <!-- Outros elementos do head -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 
 
     <title>Responsive sidebar submenus</title>
@@ -78,14 +80,50 @@
         cursor: pointer;
 
     }
+
+    .uk-heading-divider {
+        text-align: center;
+    }
+
+    .uk-search-input {
+        border: 1px solid black;
+    }
+
+  
+    form input[type="text"] {
+        padding: 10px;
+        margin-right: 10px;
+        border-radius: 5px;
+        border: 1px solid #ccc;
+    }
+    form button{
+        padding: 10px;
+        margin-right: 10px;
+        border-radius: 5px;
+        border: 1px solid black;
+        background-color: white;
+        color: black;
+    }
 </style>
 
 <body>
     <%- include('../partials/sidebar') %>
         <main>
-            <h1>Meus Simulados</h1>
+            <% if (typeof errorMessage !== 'undefined' && errorMessage.trim()) { %>
+                <script>
+                    window.onload = function() {
+                        alert("<%= errorMessage %>");
+                    };
+                </script>
+            <% } %>
+            <h1 class="uk-heading-divider"><span>MEUS SIMULADOS</span></h1>
+            <form action="/usuario/Simulados/meus-simulados" method="GET">
 
-            <table>
+                <input type="text" name="titulo" placeholder="Filtrar por título">
+                <button type="submit"><i class='bx bx-search'></i> Pesquisar</button>
+            </form>
+
+            <table class="uk-table uk-table-striped">
                 <thead>
                     <tr>
                         <th>Título</th>
