--- a/views/simulado/remover-questoes.ejs
+++ b/views/simulado/remover-questoes.ejs
@@ -9,236 +9,125 @@
         <link href="https://cdn.quilljs.com/1.3.6/quill.snow.css" rel="stylesheet">
         <script src="https://cdn.quilljs.com/1.3.6/quill.js"></script>
         <!--========== CSS ==========-->
-        <link rel="stylesheet" href="/css/styles.css">
+       
     
-            <style>
-                * {
-                margin: 0;
-                padding: 0;
-                box-sizing: border-box;
-            }
-            
-            body {
-                font-family: Arial, sans-serif;
-                line-height: 1.6;
-                background-color: #f5f5f5;
-            }
-            
-            .container {
-                max-width: 1200px;
-                margin: 0 auto;
-                padding: 20px;
-            }
-            
-            /* Estilos do cabeçalho */
-            header {
-                background-color: #333;
-                color: #fff;
-                padding: 10px;
-            }
-            
-            /* Estilos da barra lateral */
-            .sidebar {
-                width: 250px;
-                background-color: #444;
-                color: #fff;
-                position: fixed;
-                left: 0;
-                top: 0;
-                height: 100%;
-                overflow-y: auto;
-            }
-            
-            .sidebar h2 {
-                padding: 10px;
-            }
-            
-            .sidebar ul {
-                list-style-type: none;
-                padding: 0;
-            }
-            
-            .sidebar li {
-                padding: 10px;
-                border-bottom: 1px solid #666;
-            }
-            
-            /* Estilos do conteúdo principal */
-            .main-content {
-                margin: 0 auto; /* Centraliza o conteúdo principal */
-                max-width: 800px; /* Define a largura máxima do conteúdo */
-                padding: 20px;
-            }
-            
-            .main-content h1 {
-                margin-bottom: 20px;
-            }
-            
-            /* Estilos da tabela */
-            .table-container {
-                overflow-x: auto;
-            }
-            
-            table {
-                width: 100%;
-                border-collapse: collapse;
-                margin-bottom: 20px;
-            }
-            
-            table th,
-            table td {
-                padding: 10px;
-                border: 1px solid #ccc;
-            }
-            
-            /* Estilos da paginação */
-            .pagination-container {
-                margin-top: 20px;
-                text-align: center; /* Centraliza a paginação */
-            }
-            
-            .pagination-container a {
-                display: inline-block;
-                padding: 8px 16px;
-                margin-right: 5px;
-                background-color: #ccc;
-                color: #333;
-                text-decoration: none;
-                border-radius: 5px;
-            }
-            
-            .pagination-container a.active {
-                background-color: #333;
-                color: #fff;
-            }
-            
-            /* Estilos do formulário */
-            form {
-                margin-bottom: 20px;
-                text-align: center; /* Centraliza o formulário */
-            }
-            form select,
-            form input[type="text"],
-            form button,
-            form input[type="submit"] {
-                padding: 10px;
-                margin-right: 10px;
-                border-radius: 5px;
-                border: 1px solid #ccc;
-            }
-            
-            form input[type="checkbox"] {
-                margin-right: 5px;
-            }
-            
-            /* Estilos do link de voltar */
-            .back-link {
-                display: block;
-                margin-top: 20px;
-                color: #333;
-                text-decoration: none;
-                border-bottom: 1px solid #333;
-                padding-bottom: 5px;
-            }
-            .botao-associar{
-                padding: 10px 20px;
-                width: 20%;
-                background-color: #007bff;
-                color: #fff;
-                border: none;
-                border-radius: 3px;
-                cursor: pointer;
-                font-size: 14px;
-                margin-top: 10px;
-            
-                justify-self: center;
-                border: 1px solid #272525;
-            }
-            .botoes-container {
-        display: flex;
-        justify-content: space-between; /* Isso espaçará os botões igualmente */
-        width: 100%; /* Certifique-se de que o contêiner tenha largura suficiente */
+        <link rel="stylesheet" href="/css/minhasquestoes.css">
+        <link rel="stylesheet" href="/css/uikit.min.css" />
+        <script src="/js/uikit.min.js"></script>
+        <script src="/js/uikit-icons.min.js"></script>
+                    <style>
+                            body {
+        font-family: Arial, sans-serif;
+        width:100%;
+        height: 100%;
     }
 
-    .botao {
-        padding: 10px 20px;
-        margin-top: 10px;
-        border: none;
-        border-radius: 5px;
-        cursor: pointer;
+    main {
+        margin: 20px;
     }
 
-    #botaoEditar {
-        background-color: #007bff;
-        color: white;
-    }
-
-    #botaoSalvar {
-        background-color: #28a745;
-        color: white;
-    }
-    #botaoCancelar {
-        background-color: #c52612;
-        color: white;
-    }
-
-    /* Estilos para os campos de entrada e textarea */
-    .inputs {
-        width: 100%;
-        padding: 10px;
-        margin-top: 10px;
-        border: 1px solid #ced4da;
-        border-radius: 5px;
-    }
-
-    /* Estilos para o título e a descrição */
-    h1, p {
+    h1 {
+        color: #333;
         margin-bottom: 20px;
+        font-size: 24px;
+        /* Aumenta o tamanho do título */
+        font-weight: bold;
+        /* Torna o título em negrito */
     }
-            
-            /* Estilos responsivos */
-            @media screen and (max-width: 768px) {
-                .sidebar {
-                    width: 100%;
-                    position: relative;
-                    margin-bottom: 20px;
-                }
-            
-                .main-content {
-                    margin-left: 0;
-                    max-width: none; /* Remove a largura máxima no modo responsivo */
-                }
-            
-                .pagination-container {
-                    text-align: center;
-                }
-            
-                form {
-                    text-align: center;
-                }
-            }
-                        </style>
+
+    table {
+        width: 100%;
+        border-collapse: collapse;
+    }
+
+    th,
+    td {
+        border: 1px solid #ddd;
+        padding: 8px;
+        text-align: center;
+    }
+
+    th {
+        background-color: #f2f2f2;
+    }
+
+    /* Estilos gerais para todos os botões */
+    .button-container {
+        display: flex;
+        /* Usa flexbox para alinhar os botões lado a lado */
+        gap: 10px;
+        /* Espaçamento entre os botões */
+        justify-content: center;
+        /* Centraliza os botões horizontalmente */
+        padding: 10px;
+        /* Padding ao redor do contêiner para dar espaço */
+        /* Fundo claro para o contêiner */
+        /* Sombra suave para dar profundidade */
+    }
+
+    .button {
+        display: flex;
+        align-items: center;
+        gap: 5px;
+        padding: 8px 12px;
+        border-radius: 5px;
+        border: 1px solid black;
+        color: black;
+        cursor: pointer;
+
+    }
+
+    .uk-heading-divider {
+        text-align: center;
+    }
+
+    .uk-search-input {
+        border: 1px solid black;
+    }
+
+  
+    form input[type="text"] {
+        padding: 10px;
+        margin-right: 10px;
+        border-radius: 5px;
+        border: 1px solid #ccc;
+    }
+    form button{
+        padding: 10px;
+        margin-right: 10px;
+        border-radius: 5px;
+        border: 1px solid black;
+        background-color: white;
+        color: black;
+    }
+                    </style>  
         <title>Responsive sidebar submenus</title>
     </head>
     <body>
         <%- include('../partials/sidebar') %>
         <!--========== CONTENTS ==========-->
         <main>
-        
+            <% if (typeof errorMessage !== 'undefined' && errorMessage.trim()) { %>
+                <script>
+                    window.onload = function() {
+                        alert("<%= errorMessage %>");
+                    };
+                </script>
+            <% } %>
 
-                <h1 id="tituloVisualizacao"><%= simulado.titulo %></h1>
-                <input type="text" name="titulo" id="tituloEdicao"class="inputs" value="<%= simulado.titulo %>" style="display: none;">
+                <h1 class="uk-heading-divider">REMOVER QUESTÕES</h1>
+               
 
                 <form action="/usuario/simulados/<%= simulado.id %>/remover-questoes" method="GET">
                     <!-- Campo de filtragem por título -->
                     <input type="text" name="titulo" placeholder="Filtrar por título">
-                    <button type="submit">Pesquisar</button>
+                    <button type="submit"><i class='bx bx-search'></i>Pesquisar</button>
                 </form>
-            <h1>Remover Questões</h1>
+
 
 
             <form action="/usuario/Simulados/<%= simulado.id %>/remover-questoes?_method=DELETE" method="POST">
-                <table>
+                <table class="table-container">
                     <thead>
                         <tr>
                             <th></th>
@@ -284,7 +173,7 @@
             </form>
             
     
-    <link rel="stylesheet" href="/css/styles.css">
+    
         </main>
 
         <!--========== MAIN JS ==========-->
