--- a/views/usuario/editar-usuario.ejs
+++ b/views/usuario/editar-usuario.ejs
@@ -7,13 +7,87 @@
     <title>Pagina de editar usuario</title>
     <link rel="stylesheet" href="/css/editar_usuario.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.0/dist/css/bootstrap.min.css" rel="stylesheet">
-    <style>
 
+    <link rel="stylesheet" href="/css/styles.css">
+    <style>
+.flex-container {
+    display: flex;
+
+
+
+    padding: 20px;
+    border-radius: 20px;
+  }
+
+  .flex-child {
+
+    border: 1px solid black;
+    margin-bottom: 20px;
+    background-color: #12385c;
+    padding: 20px;
+    border-radius: 10px;
+    color: rgb(255, 255, 255);
+  }
+
+.magenta {
+    flex: 0.3;
+}
+
+.image-container {
+    position: relative;
+}
+
+.image-container img {
+    width: 100%;
+}
+
+.green{
+    flex: 0.6;
+}
+
+.image-container .text {
+    position: absolute;
+    bottom: 0;
+    color: white; /* Texto branco */
+    width: 100%;
+    padding: 10px;
+}
+
+@media (max-width: 968px) {
+    .flex-child {
+        flex-basis: 100%;
+    }
+}
+.editar-perfil {
+    color: #FF4500;
+    /* Cor do link */
+    text-decoration: underline;
+    /* Sublinha o link */
+    cursor: pointer;
+    /* Muda o cursor para indicar que é um link */
+  }
+
+  .editar-perfil:hover {
+    color: #FF6347;
+    /* Cor do link ao passar o mouse */
+    text-decoration: none;
+    /* Remove a sublinhação ao passar o mouse */
+  }
     </style>
 </head>
 
 <body>
-    <div class="container light-style flex-grow-1 container-p-y">
+    <%- include('../partials/sidebar') %>
+    
+    <% if (typeof errorMessage !== 'undefined' && errorMessage.trim()) { %>
+        <script>
+            window.onload = function() {
+                alert("<%= errorMessage %>");
+            };
+        </script>
+    <% } %>
+    
+    <div class="container light-style flex-grow-1 container-p-y" >
         <h4 class="font-weight-bold py-3 mb-4">
             Configurações da conta
         </h4>
@@ -134,6 +208,7 @@
 
             </div>
         </div>
+   
         <script>
             document.getElementById('deleteAccountForm').addEventListener('submit', function (e) {
                 var confirmDelete = document.getElementById('confirmDelete').value;
