--- a/views/prova/template-prova.ejs
+++ b/views/prova/template-prova.ejs
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <title>Prova</title>
+    <title>Tamplete gerarPDF</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Adicione aqui os links para os estilos CSS necessários -->
