--- a/views/partials/editorEquacao.ejs
+++ b/views/partials/editorEquacao.ejs
@@ -191,18 +191,21 @@
             <button type="button"  class="editor-close-btn" id="editor-close-btn">&times</button>
         </div>
         
-        <div type="text" class="equation-preview">
+        <div type="text" class="equation-preview" style="display:none;">
             <span id="equation-preview"></span>
+           
         </div>
-
-
+      
+ 
+    
         <!-- <div type="text" class="equation-preview">
             <textarea id="equation-preview"></textarea>
         </div> -->
 
         <div class="item">
+            <!-- <input type="text" id="equation-input" style="width: 100%;"> -->
             <textarea name="" id="equation-input"></textarea>
-            <div class="equation-btn-box">
+            <div class="equation-btn-box" >
                 <button type="button"  id="symbols-box-btn">&#x2630</button>
                 <button type="button"  id="clear-btn">C</button>
             </div>
@@ -213,3 +216,9 @@
     </div>
 
 </div>
+
+
+<style>
+    /* Adicionando estilo básico para o editor */
+
+</style>
